--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -17,8 +17,8 @@
       <li>
         JSP
         <ul>
-          <li><a href="/jsp/members/new-form">회원가입</a></li>
-          <li><a href="/jsp/members">회원목록</a></li>
+          <li><a href="/jsp/members/new-form.jsp">회원가입</a></li>
+          <li><a href="/jsp/members.jsp">회원목록</a></li>
         </ul>
       </li>
       <li>
